[package]
name = "moria"
version = "0.0.1"
authors = ["James Meyer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.0", features = ["openssl"] }
actix-rt = "1.0"
actix-http = "1.0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0.104"
serde_json = "1.0.48"
jsonwebtoken = "7"
openssl = { version = "0.10.28", features = ["v110"] }
